# church_projection

./: .gitignore  CMakeLists.txt  LICENSE  PACKAGE_WINDOWS.md  README.md  main.cpp
.agent/workflows/: cleanup_themes.md
.cache/clangd/index/: BibleManager.cpp.5523C86C3EAC723E.idx  BibleManager.h.BE733BD24CBEA26B.idx  ControlWindow.cpp.58427CBE7A2169BD.idx  ControlWindow.h.7179ED3FC141758F.idx  NotesWidget.cpp.8FC59CE969D146E7.idx  NotesWidget.h.2335DFC09B732339.idx  ProjectionContent.h.1A4A1B94938EEF1B.idx  ProjectionPreview.cpp.B329D427B9CB9B67.idx  ProjectionPreview.h.F2EF7649A0433C3B.idx  ProjectionWindow.cpp.ACE5BC491D83D501.idx  ProjectionWindow.h.26B714219FB3521A.idx  Song.h.D49A0251ECC253BC.idx  SongManager.h.66E15186E2823FDB.idx  ThemeEditorDialog.cpp.D03398C81EF38B23.idx  ThemeEditorDialog.h.1FA90FCE8242749C.idx  ThemeManager.cpp.74262C9FC04FCAF7.idx  ThemeManager.h.46064312B324F622.idx  main.cpp.532A0059840AFB83.idx
.github/workflows/: build.yml
assets/: AppIcon.icns
core/: BibleManager.cpp  BibleManager.h  PdfRenderer.cpp  PdfRenderer.h  ProjectionContent.h  Song.h  SongManager.h  ThemeManager.cpp  ThemeManager.h
scripts/: fix_swab_xml.py
ui/: ControlWindow.cpp  ControlWindow.h  NotesWidget.cpp  NotesWidget.h  ProjectionPreview.cpp  ProjectionPreview.h  ProjectionWindow.cpp  ProjectionWindow.h  ThemeEditorDialog.cpp  ThemeEditorDialog.h
